feat: eliminar el campo tenantSlug de los esquemas de registro y actualizar las plantillas de correo electrónico
